// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The MetricPushApi stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuPutCloudwatchMetricsPolicy",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "metricpushapilambdametricpushapiCODEEndpoint87F9CE85": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "metricpushapilambdametricpushapiCODEDeploymentStageCODED2BD8FA5",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "5xxApiAlarmF6ACE36F": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmName": "URGENT 9-5 - CODE metric-push-api-CODE API Gateway is returning 5XX errors",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "metric-push-api-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "GuPutCloudwatchMetricsPolicyC5BCE402": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:PutMetricData",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuPutCloudwatchMetricsPolicyC5BCE402",
        "Roles": [
          {
            "Ref": "metricpushapilambdaServiceRole910E7F90",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HighClientSideErrorRateAlarm0026FCB2": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - some or all browsers are failing to render support client side pages. Log in to Sentry to see these errors: https://the-guardian.sentry.io/discover/results/?project=1213654&query="Fatal error rendering page"&queryDataset=error-events&sort=-count&statsPeriod=24h Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit metric-push-api-CODE",
        "AlarmName": "URGENT 9-5 - CODE fatal client-side errors are being reported to sentry for support-frontend",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "App",
            "Value": "metric-push-api",
          },
          {
            "Name": "Stage",
            "Value": "CODE",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "metric-push-api-client-side-error",
        "Namespace": "support-service-lambdas",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MetricPushBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "MetricPushDomainName",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
        "Stage": {
          "Ref": "metricpushapilambdametricpushapiCODEDeploymentStageCODED2BD8FA5",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "MetricPushDNSRecord": {
      "Properties": {
        "Comment": "CNAME for metric-push-api API CODE",
        "HostedZoneName": "support.guardianapis.com.",
        "Name": "metric-push-api-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "MetricPushDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "MetricPushDomainName": {
      "Properties": {
        "DomainName": "metric-push-api-code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "metricpushapilambda0761BDD0": {
      "DependsOn": [
        "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E",
        "metricpushapilambdaServiceRole910E7F90",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/metric-push-api/metric-push-api.zip",
        },
        "Description": "API triggered lambda to push a metric to cloudwatch so we can alarm on errors",
        "Environment": {
          "Variables": {
            "APP": "metric-push-api",
            "App": "metric-push-api",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "metric-push-api-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "metricpushapilambdaServiceRole910E7F90",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "metricpushapilambdaServiceRole910E7F90": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/metric-push-api/metric-push-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/metric-push-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/metric-push-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E",
        "Roles": [
          {
            "Ref": "metricpushapilambdaServiceRole910E7F90",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "metricpushapilambdametricpushapiCODE87B70A97": {
      "Properties": {
        "Description": "API Gateway endpoint for the metric-push-api-CODE lambda",
        "Name": "metric-push-api-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "metricpushapilambdametricpushapiCODEANY7DBEC52E": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "metricpushapilambda0761BDD0",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiCODE87B70A97",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "metricpushapilambdametricpushapiCODEANYApiPermissionTestmetricpushapiCODEmetricpushapilambdametricpushapiCODE7192A6B0ANYA598A7B2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiCODEANYApiPermissionmetricpushapiCODEmetricpushapilambdametricpushapiCODE7192A6B0ANY872C891B": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
              },
              "/",
              {
                "Ref": "metricpushapilambdametricpushapiCODEDeploymentStageCODED2BD8FA5",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiCODEAccountA4210FEA": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "metricpushapilambdametricpushapiCODE87B70A97",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiCODECloudWatchRole979C7B9B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "metricpushapilambdametricpushapiCODECloudWatchRole979C7B9B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "metricpushapilambdametricpushapiCODEDeployment9B65369Cbfd935d3e15ba02166d0d2a3efbb3b26": {
      "DependsOn": [
        "metricpushapilambdametricpushapiCODEproxyANYC000D577",
        "metricpushapilambdametricpushapiCODEproxyBBD345B3",
        "metricpushapilambdametricpushapiCODEANY7DBEC52E",
      ],
      "Properties": {
        "Description": "API Gateway endpoint for the metric-push-api-CODE lambda",
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "metricpushapilambdametricpushapiCODEDeploymentStageCODED2BD8FA5": {
      "DependsOn": [
        "metricpushapilambdametricpushapiCODEAccountA4210FEA",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "metricpushapilambdametricpushapiCODEDeployment9B65369Cbfd935d3e15ba02166d0d2a3efbb3b26",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "metricpushapilambdametricpushapiCODEproxyANYApiPermissionTestmetricpushapiCODEmetricpushapilambdametricpushapiCODE7192A6B0ANYproxy0A01E80E": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiCODEproxyANYApiPermissionmetricpushapiCODEmetricpushapilambdametricpushapiCODE7192A6B0ANYproxyA2E27C34": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
              },
              "/",
              {
                "Ref": "metricpushapilambdametricpushapiCODEDeploymentStageCODED2BD8FA5",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiCODEproxyANYC000D577": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "metricpushapilambda0761BDD0",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "metricpushapilambdametricpushapiCODEproxyBBD345B3",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "metricpushapilambdametricpushapiCODEproxyBBD345B3": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiCODE87B70A97",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiCODE87B70A97",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The MetricPushApi stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuPutCloudwatchMetricsPolicy",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "metricpushapilambdametricpushapiPRODEndpoint1719E15A": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "metricpushapilambdametricpushapiPRODF582713E",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "metricpushapilambdametricpushapiPRODDeploymentStagePRODBE69BCFC",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "5xxApiAlarmF6ACE36F": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmName": "URGENT 9-5 - PROD metric-push-api-PROD API Gateway is returning 5XX errors",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "metric-push-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "GuPutCloudwatchMetricsPolicyC5BCE402": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:PutMetricData",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuPutCloudwatchMetricsPolicyC5BCE402",
        "Roles": [
          {
            "Ref": "metricpushapilambdaServiceRole910E7F90",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "HighClientSideErrorRateAlarm0026FCB2": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - some or all browsers are failing to render support client side pages. Log in to Sentry to see these errors: https://the-guardian.sentry.io/discover/results/?project=1213654&query="Fatal error rendering page"&queryDataset=error-events&sort=-count&statsPeriod=24h Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit metric-push-api-PROD",
        "AlarmName": "URGENT 9-5 - PROD fatal client-side errors are being reported to sentry for support-frontend",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 3,
        "Dimensions": [
          {
            "Name": "App",
            "Value": "metric-push-api",
          },
          {
            "Name": "Stage",
            "Value": "PROD",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "metric-push-api-client-side-error",
        "Namespace": "support-service-lambdas",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 2,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "MetricPushBasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "MetricPushDomainName",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
        "Stage": {
          "Ref": "metricpushapilambdametricpushapiPRODDeploymentStagePRODBE69BCFC",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "MetricPushDNSRecord": {
      "Properties": {
        "Comment": "CNAME for metric-push-api API PROD",
        "HostedZoneName": "support.guardianapis.com.",
        "Name": "metric-push-api-prod.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "MetricPushDomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "MetricPushDomainName": {
      "Properties": {
        "DomainName": "metric-push-api-prod.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "metricpushapilambda0761BDD0": {
      "DependsOn": [
        "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E",
        "metricpushapilambdaServiceRole910E7F90",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/metric-push-api/metric-push-api.zip",
        },
        "Description": "API triggered lambda to push a metric to cloudwatch so we can alarm on errors",
        "Environment": {
          "Variables": {
            "APP": "metric-push-api",
            "App": "metric-push-api",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "metric-push-api-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "metricpushapilambdaServiceRole910E7F90",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "metricpushapilambdaServiceRole910E7F90": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/metric-push-api/metric-push-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/metric-push-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/metric-push-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "metricpushapilambdaServiceRoleDefaultPolicyE40FF18E",
        "Roles": [
          {
            "Ref": "metricpushapilambdaServiceRole910E7F90",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "metricpushapilambdametricpushapiPRODANYApiPermissionTestmetricpushapiPRODmetricpushapilambdametricpushapiPROD82FDF238ANYAF62DC85": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiPRODF582713E",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiPRODANYApiPermissionmetricpushapiPRODmetricpushapilambdametricpushapiPROD82FDF238ANY15C19A59": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiPRODF582713E",
              },
              "/",
              {
                "Ref": "metricpushapilambdametricpushapiPRODDeploymentStagePRODBE69BCFC",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiPRODANYD7FD3932": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "metricpushapilambda0761BDD0",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiPRODF582713E",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "metricpushapilambdametricpushapiPRODAccountE0A9FC31": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "metricpushapilambdametricpushapiPRODF582713E",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiPRODCloudWatchRole8D1A7A99",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "metricpushapilambdametricpushapiPRODCloudWatchRole8D1A7A99": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "metricpushapilambdametricpushapiPRODDeployment353B728D2f7424849f61ebeb3f6f6ef9013cc2f9": {
      "DependsOn": [
        "metricpushapilambdametricpushapiPRODproxyANY9737E265",
        "metricpushapilambdametricpushapiPRODproxy1154D5C4",
        "metricpushapilambdametricpushapiPRODANYD7FD3932",
      ],
      "Properties": {
        "Description": "API Gateway endpoint for the metric-push-api-PROD lambda",
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "metricpushapilambdametricpushapiPRODDeploymentStagePRODBE69BCFC": {
      "DependsOn": [
        "metricpushapilambdametricpushapiPRODAccountE0A9FC31",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "metricpushapilambdametricpushapiPRODDeployment353B728D2f7424849f61ebeb3f6f6ef9013cc2f9",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "metricpushapilambdametricpushapiPRODF582713E": {
      "Properties": {
        "Description": "API Gateway endpoint for the metric-push-api-PROD lambda",
        "Name": "metric-push-api-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "metric-push-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "metricpushapilambdametricpushapiPRODproxy1154D5C4": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "metricpushapilambdametricpushapiPRODF582713E",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "metricpushapilambdametricpushapiPRODproxyANY9737E265": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "metricpushapilambda0761BDD0",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "metricpushapilambdametricpushapiPRODproxy1154D5C4",
        },
        "RestApiId": {
          "Ref": "metricpushapilambdametricpushapiPRODF582713E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "metricpushapilambdametricpushapiPRODproxyANYApiPermissionTestmetricpushapiPRODmetricpushapilambdametricpushapiPROD82FDF238ANYproxy328E0807": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiPRODF582713E",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "metricpushapilambdametricpushapiPRODproxyANYApiPermissionmetricpushapiPRODmetricpushapilambdametricpushapiPROD82FDF238ANYproxy31D39D5D": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "metricpushapilambda0761BDD0",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "metricpushapilambdametricpushapiPRODF582713E",
              },
              "/",
              {
                "Ref": "metricpushapilambdametricpushapiPRODDeploymentStagePRODBE69BCFC",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
